# post-moderation-example

./: .gitignore  Makefile  README.md  pyproject.toml
moderation_ml_example/: app.py  background_tasks.py  config.py  logging.py  mock_moderation_service.py  models.py  moderation_client.py  repository.py
test/: test_post_repository.py
test/integration/: test_api.py
test/unit/: test_moderation_background_task.py  test_post_repository.py
