[tool.poetry]
name = "moderation_ml_example"
version = "0.1.0"
description = ""
authors = ["Mikey Mo <mikeyjkmo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
pydantic = "^1.9.1"
httpx = "^0.22.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"
mypy = "^0.950"
requests = "^2.27.1"
pytest-icdiff = "^0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
